--- a/scss/app.scss
+++ b/scss/app.scss
@@ -470,12 +470,15 @@ a:hover{
   .bio-info{
     @include grid-row();
     .bio-cv{
-      @include grid-column(9);
+      @include grid-column(12);
       padding: 3rem;
+      @media #{$large-up}{
+        @include grid-column(9, $pull: 3);
+      }
     }
     .bio-extra{
-      @include grid-column(3);
-      padding: 0;
+      @include grid-column(12);
+      //padding: 0;
       text-align: center;
       p{
         font-weight: bolder;
@@ -487,6 +490,10 @@ a:hover{
       }
       h1, h2, h3, h4, h5, h6{
         color: $jet;
+      }
+      @media #{$large-up}{
+        @include grid-column(3, $push: 9);
+        padding: 0;
       }
     }
   }
