--- a/scss/app.scss
+++ b/scss/app.scss
@@ -243,10 +243,7 @@ $xxlarge-range: (120.063em, 99999999em);
   margin: 0;
   width: 100%;
   height: 300px;
-  background: url("/images/constr.jpg") no-repeat center center;
-  background-size: cover;
-  background-position: center bottom;
-  background-attachment: fixed;
+  background: url("/images/constr.jpg") no-repeat center bottom fixed;
   img{
     position: absolute;
     width: 18rem;
