--- a/scss/app.scss
+++ b/scss/app.scss
@@ -237,13 +237,30 @@ $xxlarge-range: (120.063em, 99999999em);
    ========================================================================== */
    
 // Hero Images Only
+
+video#bgvid { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(/images/constr.jpg) no-repeat;
+    background-size: cover; 
+}
  
 .out-of-grid{
   position: relative;
   margin: 0;
   width: 100%;
   height: 300px;
-  background: url("/images/constr.jpg") no-repeat center bottom fixed;
+  //background: url("/images/constr.jpg") no-repeat center bottom fixed;
   img{
     position: absolute;
     width: 18rem;
@@ -279,8 +296,24 @@ $xxlarge-range: (120.063em, 99999999em);
     color: $white;
     font-weight: bold;
     text-align: center;
+    top: 10rem;
+    animation: fadein 5s;
+  }
+  img{
+    width: 5rem;
+    height: auto;
   }
   transform: translateY(-50%);
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
 }
 
 //Main Content
